       doxygen 3rd party libraries detection. If detection fails, we use our
       own package finder.
     - Under Windows, changes done to add "d" suffix to the library name when
       build in debug (libvisp-2d.lib and libvisp-2d.dll). Install stage
       copy libvisp-2[d].lib in $CMAKE_INSTALL_PREFIX/lib and libvisp-2[d].dll 
       in $CMAKE_INSTALL_PREFIX/bin.
  - Bug fixed
     - [13536] Division by zero in vpMeLine
     - [13548] ViSP-2.6.1 produces several warnings with g++ 4.4.3, a const 
	       is missing in vpMbtDistanceLine.h
     - [13575] ViSP sporadic segmentation fault in vpMeLine
     - [13625] trackMeNurbs example produce an assertion failed with MSVC: 
               "list iterator not incrementable"
     - [13626] testXmlParser produre a Debug assertion failed with MSVC 
     - [13678] Cannot build all the examples if no display capability is 
	       available
     - [13679] GDI not detected on Windows 7 (64 bit) with Visual C++ Express 
	       2010
     - [13689] Memory leaks in jpeg reader: vpImageIo::readJPEG()
     - [13690] Memory leaks in NURBS tracker
     - [13843] In vpPolygon, isInside() may produce a segfault and getArea()
               or getCenter() give bad results
     - [13850] visp-config.bat produces a non compatible msvc 2010 output format			   
	
----------------------------------------------
ViSP 2.6.1 (released October 20th, 2011)
  - New features
     - Introduction of Lapack support used for the SVD decomposition in vpMatrix
     - Introduction of vpAROgre that enables augmented reality applications 
       based on Ogre 3D. Some examples are provided in examples/ogre-simulator
     - Add cylinder's tracking in the model-based tracker.
     - Reintroduce OpenCV 2.0.0 support lost in ViSP 2.6.0
     - Introduction of vpKinect, a wrapper of libfreenect to support the 
       Kinect device
     - Introduction of vpMoment and vpFeatureMoment classes to be able to 