@@ -19,6 +19,8 @@ ViSP 2.6.2 (under development)
        build in debug (libvisp-2d.lib and libvisp-2d.dll). Install stage
        copy libvisp-2[d].lib in $CMAKE_INSTALL_PREFIX/lib and libvisp-2[d].dll 
        in $CMAKE_INSTALL_PREFIX/bin.
+  - Examples:
+    - New example plot3d.cpp to show how to plot 3D curves
   - Bug fixed
      - [13536] Division by zero in vpMeLine
      - [13548] ViSP-2.6.1 produces several warnings with g++ 4.4.3, a const 
